Split into two submodules - Area and Town